--- a/museum-management-ui/src/app/login/login.component.html
+++ b/museum-management-ui/src/app/login/login.component.html
@@ -1,6 +1,35 @@
-
-<h1>Museum Management System</h1>
+<!-- <h1>Museum Management System</h1>
 
 <h1>login!</h1>
 
-<button routerLink="/main">Login</button>
+<button routerLink="/main">Login</button> -->
+
+<div class="login-page-wrapper">
+
+    <div class="login-wrapper">
+        <div class="logo-container">
+            <div class="logo-image">
+
+            </div>
+            <!-- <img src="login-logo.png" alt=""> -->
+        </div>
+        <div class="login-form-wrapper">
+            <h1>Login to your account</h1>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Username</label>
+                <input type="text" class="form-control input" id="exampleInputEmail1" placeholder="Enter username"
+                    aria-describedby="emailHelp">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" placeholder="Enter password" class="form-control input"
+                    id="exampleInputPassword1">
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Remember me</label>
+            </div>
+            <button routerLink="/main" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+</div>
