--- a/museum-management-ui/src/app/main/main.component.html
+++ b/museum-management-ui/src/app/main/main.component.html
@@ -1,5 +1,43 @@
-<h1>Museum Management System</h1>
+<mat-drawer-container class="example-container" autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="side" opened>
+        <div class="sidenav-header">
+            <div class="logo-container">
+                <div class="logo-image"></div>
+            </div>
+        </div>
+        <mat-list>
+            <mat-list-item routerLink="/main/visitors">
+                <mat-icon class="mat-list-icon">dashboard</mat-icon> <div>Dashboard</div>
+            </mat-list-item>
+            <mat-list-item routerLink="/main/visitors">
+                <mat-icon class="mat-list-icon">person_pin</mat-icon> Visitors
+            </mat-list-item>
+            <mat-list-item routerLink="/main/artifacts">
+                <mat-icon class="mat-list-icon">collections</mat-icon>
+                Artifacts
+            </mat-list-item>
+            <mat-list-item routerLink="/main/visitors">
+                <mat-icon class="mat-list-icon">perm_contact_calendar</mat-icon> Employees
+            </mat-list-item>
+            <mat-list-item routerLink="/main/users">
+                <mat-icon class="mat-list-icon">supervisor_account</mat-icon>
+                Users
+            </mat-list-item>
+            
+        </mat-list>
+    </mat-drawer>
 
-<h1>login succssful</h1>
-
-<button routerLink="/login">Logout</button>
+    <div class="example-sidenav-content">
+        <mat-toolbar>
+            <mat-toolbar-row>
+                <mat-icon (click)="drawer.toggle()" class="menu-icon" aria-hidden="false"
+                    aria-label="Example heart icon">menu</mat-icon>
+                <button class="btn btn-primary" routerLink="/login" style="position: absolute;
+                right: 210px;">Logout</button>
+            </mat-toolbar-row>
+        </mat-toolbar>
+        <div class="content-inner">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</mat-drawer-container>
