--- a/museum-management-ui/src/app/main/main.component.html
+++ b/museum-management-ui/src/app/main/main.component.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <mat-list>
-            <mat-list-item routerLink="/main/visitors">
+            <mat-list-item routerLink="/main/dashboard">
                 <mat-icon class="mat-list-icon">dashboard</mat-icon> <div>Dashboard</div>
             </mat-list-item>
             <mat-list-item routerLink="/main/visitors">
@@ -16,7 +16,7 @@
                 <mat-icon class="mat-list-icon">collections</mat-icon>
                 Artifacts
             </mat-list-item>
-            <mat-list-item routerLink="/main/visitors">
+            <mat-list-item routerLink="/main/employees">
                 <mat-icon class="mat-list-icon">perm_contact_calendar</mat-icon> Employees
             </mat-list-item>
             <mat-list-item routerLink="/main/users">
