connected employee component to REST api

--- a/museum-management-ui/src/app/main/employees/employees.component.html
+++ b/museum-management-ui/src/app/main/employees/employees.component.html
@@ -1,1 +1,26 @@
 <p>employees works!</p>
+<h1>{{employee.firstName}}</h1>
+<!-- <mat-table class="employee-table mat-elevation-z8" [dataSource]="dataSource">
+  
+    <ng-container matColumnDef="FirstName">
+        <div *matHeaderCellDef>#</div>
+        <div *matCellDef="let employee">{{employee.FirstName}}</div>
+    </ng-container>
+  
+    <ng-container matColumnDef="LastName">
+        <div *matHeaderCellDef>LastName</div>
+        <div class="LastName-cell"
+                  *matCellDef="let employee">{{employee.LastName}}</div>
+    </ng-container>
+  
+    <ng-container matColumnDef="EmailId">
+        <div *matHeaderCellDef>EmailId</div>
+        <div class="EmailId-cell"
+                  *matCellDef="let employee">{{employee.EmailId}}</div>
+    </ng-container>
+    
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    
+</mat-table> -->
