--- a/museum-management-ui/src/app/main/employees/employees.component.html
+++ b/museum-management-ui/src/app/main/employees/employees.component.html
@@ -1,26 +1,26 @@
-<p>employees works!</p>
-<h1>{{employee.firstName}}</h1>
-<!-- <mat-table class="employee-table mat-elevation-z8" [dataSource]="dataSource">
-  
-    <ng-container matColumnDef="FirstName">
-        <div *matHeaderCellDef>#</div>
-        <div *matCellDef="let employee">{{employee.FirstName}}</div>
+<p>Employee Details</p>
+ <mat-table class="employee-table mat-elevation-z8" [dataSource]="dataSource">
+    <ng-container  matColumnDef="firstName">
+        <mat-header-cell *matHeaderCellDef>First Name</mat-header-cell>
+        <mat-cell *matCellDef="let dataSource">{{dataSource.firstName}}</mat-cell>
     </ng-container>
-  
-    <ng-container matColumnDef="LastName">
-        <div *matHeaderCellDef>LastName</div>
-        <div class="LastName-cell"
-                  *matCellDef="let employee">{{employee.LastName}}</div>
+    <ng-container  matColumnDef="lastName">
+        <mat-header-cell *matHeaderCellDef>Last Name</mat-header-cell>
+        <mat-cell *matCellDef="let dataSource">{{dataSource.lastName}}</mat-cell>
     </ng-container>
-  
-    <ng-container matColumnDef="EmailId">
-        <div *matHeaderCellDef>EmailId</div>
-        <div class="EmailId-cell"
-                  *matCellDef="let employee">{{employee.EmailId}}</div>
+    <ng-container  matColumnDef="roleName">
+        <mat-header-cell *matHeaderCellDef>Role</mat-header-cell>
+        <mat-cell *matCellDef="let dataSource">{{dataSource.roleName}}</mat-cell>
     </ng-container>
-    
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    
-    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    
-</mat-table> -->
+    <ng-container  matColumnDef="sectionName">
+        <mat-header-cell *matHeaderCellDef>Department</mat-header-cell>
+        <mat-cell *matCellDef="let dataSource">{{dataSource.sectionName}}</mat-cell>
+    </ng-container>
+    <ng-container  matColumnDef="emailId">
+        <mat-header-cell *matHeaderCellDef>Email Id</mat-header-cell>
+        <mat-cell *matCellDef="let dataSource">{{dataSource.emailId}}</mat-cell>
+    </ng-container>
+   
+    <mat-header-row *matHeaderRowDef="tableColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: tableColumns"></mat-row>
+</mat-table> 
