--- a/museum-management-ui/src/app/main/main.component.scss
+++ b/museum-management-ui/src/app/main/main.component.scss
@@ -9,8 +9,37 @@
     height: 100%;
 }
 
+.toolbar-inner{
+    display: flex;
+    justify-content: space-between;
+    width: calc(100% - 210px);
+
+    .action-item-wraper{
+        margin-left: 16px;
+        display: inline-block;
+        color: #343a40;
+        cursor: pointer;
+    }
+
+    .action-item-wraper:hover{
+        color: #dc3545;
+    }
+
+    .action-icon {
+        font-size: 18px;
+        margin-right: 8px;
+        display: inline-block;
+    }
+
+    .action-text {
+        display: inline-block;
+    }
+}
+
 .logo-container {
-    background-color: #c1375a;
+    background-color: #343a40;
+    width: 210px;
+    display: none;
 
     .logo-image {
         background-image: url("../../assets/images/login-logo.png");
@@ -23,8 +52,28 @@
     }
 }
 
+.welcome-message {
+    height: 61px;
+    font-size: 18px;
+    line-height: 61px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #dfdfdf;
+    color: #583990;
+
+    i{
+        font-size: 32px;
+        margin-top: 14px;
+        margin-left: 10px;
+        margin-right: 6px;
+    }
+}
+
+mat-list {
+    width: 210px;
+}
+
 .content-inner {
-    padding: 10px;
+    padding: 12px;
     padding-top: 70px;
     background-color: #f3f4f8;
     height: 100%;
