--- a/museum-management-ui/src/app/main/visitors/visitors.component.html
+++ b/museum-management-ui/src/app/main/visitors/visitors.component.html
@@ -1,1 +1,87 @@
-<p>visitors works!</p>
+<div class="table-header">
+    <div class="table-title">
+        <h3> Visitors List </h3>
+    </div>
+    <div class="actions-wrapper">
+        <div class="action-item-wraper" (click)="openDialog()">
+            <div class="action-icon"><i class="far fa-plus-square"></i></div>
+            <div class="action-text">add</div>
+        </div>
+        <div class="action-item-wraper">
+            <div class="action-icon"><i class="far fa-edit"></i></div>
+            <div class="action-text">edit</div>
+        </div>
+        <div class="action-item-wraper">
+            <div class="action-icon"><i class="far fa-trash-alt"></i></div>
+            <div class="action-text">delete</div>
+        </div>
+    </div>
+</div>
+
+<mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
+</mat-form-field>
+<div class="mat-elevation-z4" width=100%>
+    <table mat-table [dataSource]="dataSource" matSort width=100%>
+
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="visitorId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Visitor Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.visitorId}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="firstName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="lastName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+            <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
+            <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Ticket Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="section">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Section </th>
+            <td mat-cell *matCellDef="let element"> {{element.section}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+        </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
