--- a/museum-management-ui/src/app/main/visitors/visitors.component.html
+++ b/museum-management-ui/src/app/main/visitors/visitors.component.html
@@ -3,6 +3,15 @@
         <h3> Visitors List </h3>
     </div>
     <div class="actions-wrapper">
+        <!-- <mat-form-field>
+            <mat-label>Search</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Enter search text">
+        </mat-form-field> -->
+        <mat-form-field>
+            <mat-label>Search</mat-label>
+            <input matInput (keyup)="applyFilter($event)"  placeholder="Enter search text">
+            <mat-icon matSuffix>search</mat-icon>
+          </mat-form-field>
         <div class="action-item-wraper" (click)="openDialog()">
             <div class="action-icon"><i class="far fa-plus-square"></i></div>
             <div class="action-text">add</div>
@@ -18,10 +27,6 @@
     </div>
 </div>
 
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
-</mat-form-field>
 <div class="mat-elevation-z4" width=100%>
     <table mat-table [dataSource]="dataSource" matSort width=100%>
 
@@ -69,9 +74,9 @@
             <td mat-cell *matCellDef="let element"> {{element.age}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="type">
+        <ng-container matColumnDef="category">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Ticket Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.category}} </td>
         </ng-container>
 
         <ng-container matColumnDef="section">
