Created loader service, rest service and Add visitor page

--- a/museum-management-ui/src/app/main/main.component.html
+++ b/museum-management-ui/src/app/main/main.component.html
@@ -53,3 +53,10 @@
         </div>
     </div>
 </mat-drawer-container>
+
+  <div class="d-flex justify-content-center loading-overlay" *ngIf="loaderService.showLoader">
+    <div class="spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+  
