--- a/museum-management-ui/src/app/main/visitors/visitors.component.html
+++ b/museum-management-ui/src/app/main/visitors/visitors.component.html
@@ -79,9 +79,9 @@
             <td mat-cell *matCellDef="let element"> {{element.category}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="section">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Section </th>
-            <td mat-cell *matCellDef="let element"> {{element.section}} </td>
+        <ng-container matColumnDef="sectionId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Section Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.sectionId}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
