--- a/museum-management-ui/src/app/main/employees/employees.component.html
+++ b/museum-management-ui/src/app/main/employees/employees.component.html
@@ -1,26 +1,88 @@
-<p>Employee Details</p>
- <mat-table class="employee-table mat-elevation-z3" [dataSource]="dataSource">
-    <ng-container  matColumnDef="firstName">
-        <mat-header-cell *matHeaderCellDef>First Name</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.firstName}}</mat-cell>
-    </ng-container>
-    <ng-container  matColumnDef="lastName">
-        <mat-header-cell *matHeaderCellDef>Last Name</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.lastName}}</mat-cell>
-    </ng-container>
-    <ng-container  matColumnDef="roleName">
-        <mat-header-cell *matHeaderCellDef>Role</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.roleName}}</mat-cell>
-    </ng-container>
-    <ng-container  matColumnDef="sectionName">
-        <mat-header-cell *matHeaderCellDef>Department</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.sectionName}}</mat-cell>
-    </ng-container>
-    <ng-container  matColumnDef="emailId">
-        <mat-header-cell *matHeaderCellDef>Email Id</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.emailId}}</mat-cell>
-    </ng-container>
-   
-    <mat-header-row *matHeaderRowDef="tableColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: tableColumns"></mat-row>
-</mat-table> 
+
+<div class="table-header">
+    <div class="table-title">
+        <h3> Employee List </h3>
+    </div>
+    <div class="actions-wrapper">
+        <!-- <mat-form-field>
+            <mat-label>Search</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Enter search text">
+        </mat-form-field> -->
+        <mat-form-field>
+            <mat-label>Search</mat-label>
+            <input matInput (keyup)="applyFilter($event)"  placeholder="Enter search text">
+            <mat-icon matSuffix>search</mat-icon>
+          </mat-form-field>
+         <div class="action-item-wraper" (click)="openDialog()">
+            <div class="action-icon"><i class="far fa-plus-square"></i></div>
+            <div class="action-text">add</div>
+        </div>
+        <div class="action-item-wraper">
+            <div class="action-icon"><i class="far fa-edit"></i></div>
+            <div class="action-text">edit</div>
+        </div>
+        <div class="action-item-wraper">
+            <div class="action-icon"><i class="far fa-trash-alt"></i></div>
+            <div class="action-text">delete</div>
+        </div>
+    </div>
+</div>
+
+<div class="mat-elevation-z4" width=100%>
+    <table mat-table [dataSource]="dataSource" matSort width=100%>
+
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="empId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Employee Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.empId}} </td>
+        </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="firstName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="lastName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="roleName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+            <td mat-cell *matCellDef="let element"> {{element.roleName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="sectionName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Department </th>
+            <td mat-cell *matCellDef="let element"> {{element.sectionName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="emailId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Email Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.emailId}} </td>
+        </ng-container>
+
+       
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+        </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
