--- a/museum-management-ui/src/app/main/visitors/add-visitor/add-visitor.component.html
+++ b/museum-management-ui/src/app/main/visitors/add-visitor/add-visitor.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Add Visitor</h1>
+<h1 mat-dialog-title>{{mode}} Visitor</h1>
   <div class="form-group">
     <label for="firstName">First Name</label>
     <input [(ngModel)]="visitor.firstName" type="text" class="form-control" id="firstName" placeholder="Enter first name">
