--- a/museum-management-ui/src/app/main/visitors/visitors.component.html
+++ b/museum-management-ui/src/app/main/visitors/visitors.component.html
@@ -3,67 +3,37 @@
         <h3> Visitors List </h3>
     </div>
     <div class="actions-wrapper">
-        <!-- <mat-form-field>
-            <mat-label>Search</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Enter search text">
-        </mat-form-field> -->
         <mat-form-field>
             <mat-label>Search</mat-label>
-            <input matInput (keyup)="applyFilter($event)"  placeholder="Enter search text">
+            <input matInput (keyup)="applyFilter($event)" placeholder="Enter search text">
             <mat-icon matSuffix>search</mat-icon>
-          </mat-form-field>
-        <div class="action-item-wraper" (click)="openDialog()">
-            <div class="action-icon"><i class="far fa-plus-square"></i></div>
-            <div class="action-text">add</div>
-        </div>
-        <div class="action-item-wraper">
-            <div class="action-icon"><i class="far fa-edit"></i></div>
-            <div class="action-text">edit</div>
-        </div>
-        <div class="action-item-wraper">
-            <div class="action-icon"><i class="far fa-trash-alt"></i></div>
-            <div class="action-text">delete</div>
-        </div>
+        </mat-form-field>
+        &nbsp;&nbsp;
+       
+        <button mat-stroked-button (click)="openAddDialog()">
+            <div class="action-icon"><i class="fas fa-plus-square"></i></div>
+            <div class="action-text">Add</div>
+        </button>
     </div>
 </div>
 
-<div class="mat-elevation-z4" width=100%>
+<div width=100%>
     <table mat-table [dataSource]="dataSource" matSort width=100%>
-
-        <!-- Checkbox Column -->
-        <ng-container matColumnDef="select">
-            <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox (change)="$event ? masterToggle() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-                </mat-checkbox>
-            </th>
-            <td mat-cell *matCellDef="let row">
-                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-                    [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-                </mat-checkbox>
-            </td>
-        </ng-container>
-
-        <!-- Position Column -->
         <ng-container matColumnDef="visitorId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Visitor Id </th>
             <td mat-cell *matCellDef="let element"> {{element.visitorId}} </td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="firstName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name </th>
             <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
         <ng-container matColumnDef="lastName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
             <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
         </ng-container>
 
-        <!-- Symbol Column -->
         <ng-container matColumnDef="gender">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
             <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
@@ -84,9 +54,17 @@
             <td mat-cell *matCellDef="let element"> {{element.sectionId}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef style="width: 80px;"></th>
+            <td mat-cell *matCellDef="let element" style="width: 80px; text-align: center;">
+                <div class="row-action-wrapper" style="width: 100%; text-align: center;">
+                    <i class="far fa-edit" (click)="openEditDialog(element)"></i>
+                    <i class="far fa-trash-alt" (click)="openDeleteDialog(element)"></i>
+                </div>
+            </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
-        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
 </div>
