employee update detele part completed

--- a/museum-management-ui/src/app/main/employees/add-employee/add-employee.component.html
+++ b/museum-management-ui/src/app/main/employees/add-employee/add-employee.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Add Employee</h1>
+<h1 mat-dialog-title>{{mode}} Employee</h1>
   <div class="form-group">
     <label for="firstName">First Name</label>
     <input [(ngModel)]="employee.firstName" type="text" class="form-control" id="firstName" placeholder="Enter first name">
