--- a/museum-management-ui/src/app/main/visitors/visitors.component.html
+++ b/museum-management-ui/src/app/main/visitors/visitors.component.html
@@ -39,19 +39,24 @@
             <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="entryDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Entry </th>
+            <td mat-cell *matCellDef="let element"> {{element.entryDate | date:'hh:mm'}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="age">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
             <td mat-cell *matCellDef="let element"> {{element.age}} </td>
         </ng-container>
 
         <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Ticket Type </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Category </th>
             <td mat-cell *matCellDef="let element"> {{element.category}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="sectionId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Section Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.sectionId}} </td>
+        <ng-container matColumnDef="sectionName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Section </th>
+            <td mat-cell *matCellDef="let element"> {{element.sectionName}} </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
