--- a/museum-management-ui/src/styles.scss
+++ b/museum-management-ui/src/styles.scss
@@ -9,3 +9,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 * {
     outline: none!important;
 }
+
+.form-group .mat-form-field-wrapper {
+    padding-bottom: 0!important;
+}
