UI: Added dashboard count functionality

--- a/museum-management-ui/src/app/main/main.component.html
+++ b/museum-management-ui/src/app/main/main.component.html
@@ -37,6 +37,7 @@
                         <div>
                             <mat-icon (click)="drawer.toggle()" class="menu-icon" aria-hidden="false"
                                 aria-label="Example heart icon">menu</mat-icon>
+                                Museum Management System
                         </div>
                         <div class="action-item-wraper" routerLink="/login">
                             <button mat-raised-button>
