UI- connected to rest api to get counts

--- a/museum-management-ui/src/app/main/dashboard/dashboard.component.html
+++ b/museum-management-ui/src/app/main/dashboard/dashboard.component.html
@@ -8,28 +8,28 @@
     <div class="row">
         <div class="col">
             <mat-card>
-                <h1>120</h1>
+                <h1>{{currentCount}}</h1>
                 <h3>Current Visitors</h3>
             </mat-card>
         </div>
         <div class="col">
             <mat-card style="background: rgb(209,61,20);
             background: linear-gradient(90deg, rgba(209,61,20,1) 0%, rgba(218,87,47,1) 100%);">
-            <h1>140</h1>
+            <h1>{{totalCount}}</h1>
             <h3>Total Visitors Today</h3>
             </mat-card>
         </div>
         <div class="col">
             <mat-card style="background: rgb(131,20,209);
             background: linear-gradient(90deg, rgba(131,20,209,1) 0%, rgba(147,47,218,1) 100%);">
-                <h1>140</h1>
+                <h1>{{artifactCount}}</h1>
                 <h3>Available Artifacts</h3>
             </mat-card>
         </div>
         <div class="col">
             <mat-card style="background: rgb(187,34,115);
             background: linear-gradient(90deg, rgba(187,34,115,1) 0%, rgba(212,31,123,1) 100%);">
-            <h1>140</h1>
+            <h1>{{sectionCount}}</h1>
             <h3>Number of Sections</h3>
         </mat-card>
         </div>
