--- a/museum-management-ui/src/app/main/main.component.html
+++ b/museum-management-ui/src/app/main/main.component.html
@@ -35,9 +35,8 @@
                 <mat-toolbar-row>
                     <div class="toolbar-inner">
                         <div>
-                            <mat-icon (click)="drawer.toggle()" class="menu-icon" aria-hidden="false"
-                                aria-label="Example heart icon">menu</mat-icon>
-                                Museum Management System
+                            <i class="fas fa-bars menu-icon" (click)="drawer.toggle()" style="font-size: 20px;margin-right: 16px;"></i>
+                            <span style="font-size: 20px; font-weight: 400; color: black;">Museum Management System</span>
                         </div>
                         <div class="action-item-wraper" routerLink="/login">
                             <button mat-raised-button>
