UI: removed users tab

--- a/museum-management-ui/src/app/main/main.component.html
+++ b/museum-management-ui/src/app/main/main.component.html
@@ -21,10 +21,10 @@
             <mat-list-item routerLink="/main/employees">
                 <mat-icon class="mat-list-icon">perm_contact_calendar</mat-icon> Employees
             </mat-list-item>
-            <mat-list-item routerLink="/main/users">
+            <!-- <mat-list-item routerLink="/main/users">
                 <mat-icon class="mat-list-icon">supervisor_account</mat-icon>
                 Users
-            </mat-list-item>
+            </mat-list-item> -->
 
         </mat-list>
     </mat-drawer>
